--- a/layout-01/index.html
+++ b/layout-01/index.html
@@ -1,67 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Layout 01</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <header class="header-container">
-        <div class="logo-box"></div>
-        <div class="search-input-box"></div>
-        <div class="header-icons">
-            <div class="icon-square"></div>
-            <div class="icon-circle"></div>
-        </div>
-    </header>
-
-    <nav class="tabs-container">
-        <div class="tab active-tab"></div>
-        <div class="tab"></div>
-        <div class="tab"></div>
-        <div class="tab"></div>
-    </nav>
-
-    <hr class="separator">
-
-    <div class="pagination-bar"></div>
-
-    <main class="results-container">
-        <div class="result-item">
-            <div class="res-breadcrumb"></div>
-            <div class="res-title"></div>
-            <div class="res-description">
-                <div class="line"></div>
-                <div class="line"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="container-item sidebar-left">
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+                <div class="left-item"></div>
+            </div>
+            <div class="container-item main">
+                <div class="navbar"></div>
+                <div class="content">
+                    <div class="content-item"></div>
+                    <div class="content-item"></div>
+                    <div class="content-item"></div>
+                </div>
+            </div>
+            <div class="container-item sidebar-right">
+                <div class="right-item"></div>
+                <div class="right-item"></div>
+                <div class="right-item"></div>
             </div>
         </div>
 
-        <div class="result-item">
-            <div class="res-breadcrumb"></div>
-            <div class="res-title"></div>
-            <div class="res-description">
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </div>
-                <div class="result-item">
-            <div class="res-breadcrumb"></div>
-            <div class="res-title"></div>
-            <div class="res-description">
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </div>
-                <div class="result-item">
-            <div class="res-breadcrumb"></div>
-            <div class="res-title"></div>
-            <div class="res-description">
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </div>
-    </main>
-
-</body>
+    </body>
 </html>
